--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cheerio": "^0.22.35",
     "@types/dotenv": "^8.2.0",
     "@types/node": "^20.14.9",
+    "@types/pdf-parse": "^1.1.4",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
@@ -25,6 +26,7 @@
     "@langchain/core": "^0.2.12",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
-    "langchain": "^0.2.8"
+    "langchain": "^0.2.8",
+    "pdf-parse": "^1.1.1"
   }
 }
